# social-calc

./: README.md  benefits.py  breakeven.py  data-prep.py  index.html  pyproject.toml
data/: Table 1. Life table for the total population: United States, 2021.csv  Table 10. Life table for the Asian, non-Hispanic population: United States, 2021.csv  Table 11. Life table for Asian, non-Hispanic males: United States, 2021.csv  Table 12. Life table for Asian, non-Hispanic females: United States, 2021.csv  Table 13. Life table for the Black, non-Hispanic population: United States, 2021.csv  Table 14. Life table for Black, non-Hispanic males: United States, 2021.csv  Table 15. Life table for Black, non-Hispanic females: United States, 2021.csv  Table 16. Life table for the White, non-Hispanic population: United States, 2021.csv  Table 17. Life table for White, non-Hispanic males: United States, 2021.csv  Table 18. Life table for White, non-Hispanic females: United States, 2021.csv  Table 2. Life table for males: United States, 2021.csv  Table 3. Life table for females: United States, 2021.csv  Table 4. Life table for the Hispanic population: United States, 2021.csv  Table 5. Life table for Hispanic males: United States, 2021.csv  Table 6. Life table for Hispanic females: United States, 2021.csv  Table 7. Life table for the American Indian and Alaska Native, non-Hispanic population: United States, 2021.csv  Table 8. Life table for American Indian and Alaska Native, non-Hispanic males: United States, 2021.csv  Table01.xlsx  Table02.xlsx  Table03.xlsx  Table04.xlsx  Table05.xlsx  (+14 more)
(+1 files in other folders)
